# hs-grpc-sample

./: .envrc  .gitignore  Makefile  README.md  cabal.project  grpc-sample.cabal  shell.nix
client/: Main.hs
nix/: nixpkgs.nix
proto/: greet.proto
server/: Main.hs
